--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.19.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.2.1",
+    "marked": "^14.1.2",
     "next": "14.1.0",
     "react": "^18",
     "react-animate-on-scroll": "^2.1.7",
