--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.2.1",
     "marked": "^14.1.2",
+    "mongoose": "^8.6.2",
     "next": "14.1.0",
     "react": "^18",
     "react-animate-on-scroll": "^2.1.7",
